# pyomeca

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  Makefile  PR.md  Pipfile  README.md  README.rst  Test.py  appveyor.yml  env.yml  env_dev.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  versioneer.py
.circleci/: config.yml
.github/: pull_request_template.md
Misc/: PR.md
conda.recipe/: meta.yaml
docs/: about.md  contributing.md  custom.css  data-processing.md  nbconvert.tpl  object-creation.md  overview.md
docs/api/: analogs.md  (+4 more)
examples/: display.py  fileio.py  rbdl.py  signal_processing.py
notebooks/: getting-started.ipynb  readme-example.ipynb
pyomeca/: __init__.py  _version.py  analogs.py  angles.py  data.py  dataarray_accessor.py  fileio.py  frame_dependent.py  generalized_coordinates.py  markers.py  plot.py  rototrans.py  signal.py  types.py
test/: FileIO.py  ShowVtk.py  TestDataMarkers.csv  display.py  fileio.py  rbdl.py  rbld.py  rototrans.py  testRotoTrans.py  testShowVtk.py  testc3d.py
tests/: _constants.py  fileio.py  pytest.ini  test_docstrings.py  test_documentation_code_blocks.py  test_ezc3d.py  test_fileio.py  test_fileio_read_csv_c3d.py  test_fileio_read_other_formats.py  test_fileio_write.py  test_markers.py  test_object_creation.py  test_processing_algebra.py  test_processing_filter.py  test_processing_interp.py  test_processing_marker.py  test_processing_misc.py  test_processing_rt.py  test_rototrans.py  utils.py
(+40 files in other folders)
